# Quintessa

./: .gitignore
quintessa_api/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
quintessa_api/crates/api/: Cargo.toml
quintessa_api/crates/api/src/: app_state.rs  lib.rs  main.rs  router.rs
quintessa_api/crates/api/src/controllers/: hello_world.rs  media_controller.rs  mod.rs  projects_controller.rs  resumes_controller.rs  users_controller.rs
quintessa_api/crates/api/src/middleware/: cookie_extractor.rs  mod.rs  require_authentication.rs
quintessa_api/crates/api/src/migrations/: m20220101_000001_create_user_table.rs  m20230801_205119_seed_user.rs  m20230813_135826_create_project_table.rs  m20230901_202202_create_media_table.rs  m20231030_214811_create_refresh_token.rs  m20231124_090934_create_resume.rs  m20231124_091932_create_work.rs  m20231124_091937_create_education.rs  mod.rs
quintessa_api/crates/api/src/utilities/: app_error.rs  jwt.rs
quintessa_api/crates/application/: Cargo.toml
quintessa_api/crates/application/src/: lib.rs
quintessa_api/crates/application/src/core/: app_error.rs  mapping_profiles.rs  mod.rs  pagination.rs
quintessa_api/crates/application/src/educations/: create.rs  mod.rs  save.rs
quintessa_api/crates/application/src/media/: create.rs  delete.rs  edit.rs  list.rs  mod.rs  save.rs
quintessa_api/crates/application/src/projects/: create.rs  delete.rs  details.rs  edit.rs  list.rs  mod.rs  project_params.rs  save.rs
quintessa_api/crates/application/src/refresh_token/: mod.rs  save.rs
quintessa_api/crates/application/src/resume/: create.rs  details.rs  mod.rs  save.rs
quintessa_api/crates/application/src/users/: create.rs  details.rs  edit.rs  mod.rs  save.rs
quintessa_api/crates/application/src/works/: create.rs  mod.rs  save.rs
quintessa_api/crates/domain/: Cargo.toml
quintessa_api/crates/infrastructure/: Cargo.toml
quintessa_client/: Dockerfile  fly.toml  package-lock.json  package.json  svelte.config.js  vite.config.ts
quintessa_client/src/: app.d.ts  app.html  hooks.server.ts  supabaseService.ts
quintessa_client/src/lib/: agent.ts  model.ts
quintessa_client/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
quintessa_client/static/themes/: dark.css  light.css
(+30 files in other folders)
