[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
domain = { path = "../domain" }

# External dependencies
axum = { version = "0.6.20", features = ["macros", "headers"] }
bcrypt = "0.15.0"
chrono = "0.4.28"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
itertools = "0.11.0"
jsonwebtoken = "9.1.0"
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-migration = "0.12.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_with = "3.3.0"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors", "limit"] }
validator = { version = "0.16.1", features = ["derive"] }
tower = { version = "0.4.13", features = ["timeout"] }
reqwest = { version = "0.11.20", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
rand = "0.8.5"
uuid = { version = "1.5.0", features = ["v4"] }
axum-server = { version = "0.5.1", default-features = false, features = ["tls-rustls"] }
time = "0.3.30"
